tests/paczka1/fuzzy1/59423302.err
Error in line 5: g5W4rgOcOZ S415 22,2
Error in line 3: blQGNVC S46 81,4
Error in line 6: fDXOdaLq S124 76,1
Error in line 11: 1iwpjTGION S46 85,4
Error in line 12: fDXOdaLq S415 84,6
Error in line 15: g5W4rgOcOZ S124 94,1
